# simple-lenet

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.cuda.txt
src/alexnet/: alexnet.py  datasets.py  helper.py  run_alexnet.py
src/cnn-lstm/: download_data.sh  helper.py  models.py  pyproject.toml  run_cnn_lstm.py
src/lenet/: cifar_model.pth  download.py  helper.py  lenet.py  run_lenet.py
src/lstm/: helper.py  models.py  pyproject.toml  requirements.cuda.txt  requirements.yml  run_lstm.py
src/rand_wire_rnn/: helper.py  models.py  pyproject.toml  requirements.yml  run_rand_wire_rnn.py
src/rnn/: helper.py  models.py  requirements.cuda.txt  run_rnn.py
src/transformers/: helper.py  models.py  requirements.yml  run_transformer.py
