[project]
name = "simple-LeNet"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pip",
    "numpy==2.4.4",
    "matplotlib==3.10.9",
    "docopt==0.6.2",
    "tensorboard==2.20.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "typing_extensions==4.15.0",
    "nltk>=3.7",
    "pycocotools>=2.0.7",
    "pillow>=12.2.0",
]

[tool.uv.workspace]
members = [
    "src/cnn-lstm",
    "src/lstm",
    "src/rand_wire_rnn",
]
